[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/world/powerups/Powerup.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/world/powerups/DoubleLength.gd" type="Script" id=2]
[ext_resource path="res://assets/png/powerups/DoubleLength.png" type="Texture" id=3]
[ext_resource path="res://assets/wav/DoubleLength.wav" type="AudioStream" id=4]

[sub_resource type="AudioStreamRandomPitch" id=1]

audio_stream = ExtResource( 4 )

[node name="DoubleLength" instance=ExtResource( 1 )]
scale = Vector2( 1, 1 )
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
modulate = Color( 1, 0.25098, 0.505882, 1 )
texture = ExtResource( 3 )

[node name="FlyTween" type="Tween" parent="." index="4"]

[node name="LengthenSound" type="AudioStreamPlayer" parent="." index="5"]
stream = SubResource( 1 )

